--- a/Hometask1/style.css
+++ b/Hometask1/style.css
@@ -5,12 +5,15 @@ body {
     line-height: 1.3;
     margin: 0;
 }
+h3, h4 {
+    font-weight: 400;
+}
 .container {
     max-width: 1256px;
     margin: 0 auto;
 }
 .content {
-    max-width: 1171px;
+    max-width: 1236px;
     margin: 0 auto;
 }
 .header {
@@ -55,8 +58,12 @@ body {
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
     border-radius: 2px;
     border: 0;
-    padding: 13px 33px;
+    padding: 13px 40px;
     cursor: pointer;
+    font-size: 11px;
+    line-height: 15px;
+    text-transform: uppercase;
+    text-align: center;
 }
 .main-page {
     background-image: linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('photos/image 4.3.png');
@@ -82,11 +89,11 @@ body {
 .button-block {
     margin-top: 41px;
 }
-.button-calculate, .button-submit {
+.button-submit {
     background: #E3B873;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.3);
-    border-radius: 2px;
     color: white;
+    border-radius: 2px;
     text-transform: uppercase;
     font-size: 11px;
     text-align: center;
@@ -322,10 +329,6 @@ body {
     font-size: 13px;
     color: rgba(54, 54, 54, 0.5);
 }
-.question-input {
-    font-size: 14px;
-    color: #363636;
-}
 .button-center {
     width: 200px;
     height: 51px;
@@ -336,6 +339,8 @@ body {
     box-sizing: border-box;
     width: 231px;
     height: 17px;
+    font-size: 14px;
+    margin-top: 10px;
 }
 .checkbox {
     height: 18px;
@@ -391,8 +396,6 @@ body {
 .photo-item {
     width: 392px;
     height: 421px;
-    margin-left: 15px;
-    margin-right: 15px;
     margin-top: 30px;
 }
 .first-photo {
@@ -433,26 +436,26 @@ body {
     font-size: 18px;
     text-transform: uppercase;
     color: #FFFFFF;
-    margin-top: -28px;
+    margin-top: -10px;
+    text-align: center;
     padding-top: 17px;
-    padding-left: 25px;
-    padding-bottom: 0px;
+    padding-left: 17px;
+    padding-right: 17px;
     margin-bottom: 53px;
 }
 .forth-page {
     background: white;
     margin-top: 124px;
-}
-.main-block-list {
     background: url('photos/4.jpg') no-repeat;
-    width: 1006px;
     height: 645px;
-    margin-left: 0px;
     padding-top: 24px;
 }
+.main-block-list {
+    margin-top: 10px;
+}
 .action-list-item {
-    margin-left: 552px;
     margin-bottom: 54px;
+    margin-left: 155px;
     margin-top: 54px;
     align-items: center;
 }
@@ -509,6 +512,7 @@ body {
     margin-left: 244px;
     margin-top: 39px;
     width: 213px;
+    padding: 13px 33px;
     font-size: 13px;
     line-height: 21px;
     text-align: center;
@@ -527,6 +531,7 @@ body {
     justify-content: flex-end;
     align-items: center;
     margin-top: 10px;
+    margin-right: 200px;
 }
 .baige-circle {
     width: 72px;
@@ -682,17 +687,17 @@ body {
 }
 .seventh-page {
     margin-top: -50px;
-    padding-bottom: 100px;
-    overflow: hidden;
+    padding-bottom: 0px;
     background: linear-gradient(180deg, rgba(24, 24, 24, 0.9) 3.47%, rgba(24, 24, 24, 0.72) 100%), url('photos/image\ 7.2.jpg');
+    background-repeat: no-repeat;
 }
 .question-block {
     max-width: 883px;
     max-height: 445px;
-    margin-top: 0px; /* не знаю как вывести форму за пределы контейнера, отрицательный margin-top пробовала*/
-    z-index: 200;
+    top: -220px; 
     background: black;
     padding-bottom: 40px;
+    position: relative;
 }
 .input-row {
     justify-content: center;
@@ -725,12 +730,12 @@ body {
 }
 .button-center {
     margin-top: 35px;
-    margin-left: 45%;
+    margin-left: 40%;
 }
 .icon-circle {
     width: 28px;
     height: 28px;
-    margin-top: 26px;
+    margin-top: 20px;
     margin-left: 15px;
 }
 .map-image {
@@ -743,6 +748,13 @@ body {
 .map-photo {
     margin: -15px -15px -15px -27px;
 }
+.map-column {
+    position: relative;
+    top: -200px;
+}
 a {
     cursor: pointer;
+}
+.footer {
+    margin-top: -50px;
 }
